--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ src/main/resources/com/ardublock/block/ardublock.zip
 deploy.sh
 test-output
 src/main/resources/com/ardublock/block/littlebits/files
+*.gen
