Add Analog Hall Sensor Block
- as we now have 49e analog sensors as well

--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -137,6 +137,7 @@ bg.df_lcd_keypad=DFRobot LCD Keypad
 bg.Tinker_Accmeter=Accelerometer
 bg.Tinker_Button=Button
 bg.Tinker_Hall=Hall
+bg.Tinker_Hall_Analog=Hall Analog
 bg.Tinker_I0=I0
 bg.Tinker_I1=I1
 bg.Tinker_I2=I2
@@ -625,6 +626,7 @@ bg.Tinker_Servo.description=TinkerKit Servo
 bg.Tinker_Button.description=TinkerKit Button
 bg.Tinker_Accmeter.description=TinkerKit Accelerometer
 bg.Tinker_Hall.description=TinkerKit Hall Sensor
+bg.Tinker_Hall_Analog.description=TinkerKit Analog Hall Sensor
 bg.Tinker_LDR.description=TinkerKit LDR
 bg.Tinker_LinearPotentiometer.description=TinkerKit Accelerometer
 bg.Tinker_RotaryPotentiometer.description=TinkerKit RotaryPotentiometer
