--- a/src/main/resources/com/ardublock/block/block-mapping.properties
+++ b/src/main/resources/com/ardublock/block/block-mapping.properties
@@ -232,6 +232,7 @@ Tinker_Relay=com.ardublock.translator.block.tinker.TinkerRelayBlock
 Tinker_Button=com.ardublock.translator.block.tinker.TinkerButtonBlock
 Tinker_Accmeter=com.ardublock.translator.block.tinker.TinkerAccmeterBlock
 Tinker_Hall=com.ardublock.translator.block.tinker.TinkerHallBlock
+Tinker_Hall_Analog=com.ardublock.translator.block.tinker.TinkerHallBlockAnalog
 Tinker_LDR=com.ardublock.translator.block.tinker.TinkerLDRBlock
 Tinker_LinearPotentiometer=com.ardublock.translator.block.tinker.TinkerLinearPotentiometerBlock
 Tinker_RotaryPotentiometer=com.ardublock.translator.block.tinker.TinkerRotaryPotentiometerBlock
