--- a/src/main/resources/com/ardublock/block/ardublock.properties
+++ b/src/main/resources/com/ardublock/block/ardublock.properties
@@ -430,6 +430,7 @@ ardublock.ui.save=Save
 ardublock.ui.saveAs=Save As
 ardublock.ui.load=Open
 ardublock.ui.upload=Upload to Arduino
+ardublock.ui.erase=Erase Arduino Program
 ardublock.ui.clone=Clone
 ardublock.ui.add_comment=Add Comment
 ardublock.ui.delete_comment=Delete Comment
